# termsurf

./: .gitattributes  .gitignore  .gitmodules  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  TODO.md  TRADEMARKS.md  build-debug.sh  build-release.sh  install.sh  rename-ghostty.sh
box-demo/: server.ts
browser/: build.zig
cef-rs/examples/osr/: Cargo.toml
cef-rs/examples/osr/src/: main.rs
chromium/: AGENTS.md  README.md
docs/: backlog.md  cef-mvp2.md  cef-mvp3.md  cef-mvp4.md  cef-mvp5.md  cef.md  chromium.md  early-prototypes.md  ghostboard-launch-discovery.md  ghostty.md  issues.md  keybindings.md  ts1-bookmarks.md  ts1-ctrl-z.md  ts1-target-blank.md  ts2-cef-wezterm.md  ts2-web.md  ts3-1-architecture.md  ts3-2-webview.md  ts3-3-xpc.md  ts3-4-webpage.md  ts3-5-profile.md  ts3-6-resize.md  ts3-7-profile.md  vendor.md  web.md
ghostboard/: .gitattributes  .gitignore  .prettierignore  AGENTS.md  AI_POLICY.md  CODEOWNERS  CONTRIBUTING.md  Doxyfile  HACKING.md  Makefile  PACKAGING.md  README.md  build.zig  valgrind.supp
gui/: CONTRIBUTING.md  build.zig.zon  build.zig.zon.bak  flake.nix
html/: test-mouse.html
issues/: 0000001-competitors.md  0000003-website.md  0000101-build.md  0000102-console.md  0000108-webview.md  0000201-cef.md  0000202-cef-mvp.md  0000210-wezterm-analysis.md  0000301-architecture.md  0000304-webpage.md  0000305-profile.md  0000310-tabs.md  0000314-control.md  0000315-mode.md  0000316-dim.md  0000317-input.md  (+220 more)
roastty/: Cargo.toml
roastty/include/: roastty.h
roastty/macos/: build.nu
roastty/macos/Roastty.xcodeproj/: project.pbxproj
roastty/macos/RoasttyUITests/: RoasttyCommandPaletteTests.swift  RoasttyCustomConfigCase.swift  RoasttyDeadKeyUITests.swift  RoasttyTerminalOutputUITests.swift  RoasttyTerminalText.swift  RoasttyTitleUITests.swift
roastty/macos/Sources/App/macOS/: AppDelegate.swift
roastty/macos/Sources/Features/AppleScript/: ScriptKeyEventCommand.swift  ScriptTerminal.swift
roastty/macos/Sources/Features/Terminal/: BaseTerminalController.swift
roastty/macos/Sources/Helpers/Extensions/: OSColor+Extension.swift
roastty/macos/Sources/Roastty/: Roastty.App.swift
roastty/macos/Sources/Roastty/Surface View/: SurfaceView_AppKit.swift
roastty/macos/Tests/: BenchmarkTests.swift  OSColorExtensionTests.swift
roastty/macos/Tests/Roastty/: ShellIntegrationResourceTests.swift  SurfaceKeyTextTests.swift  SurfaceViewAppKitTests.swift
roastty/resources/terminfo/: roastty.terminfo
roastty/src/: crash.rs  fastmem.rs  lib.rs  termio.rs  zf.rs
roastty/src/config/: conditional.rs  formatter.rs  keybind.rs  loader.rs  mod.rs  string.rs
roastty/src/font/: atlas.rs  backend.rs  codepoint_map.rs  codepoint_resolver.rs  collection.rs  deferred_face.rs  discovery.rs  embedded.rs  emoji_presentation.rs  library.rs  metrics.rs  mod.rs  run.rs  shape.rs  shaper_cache.rs  shared_grid.rs  shared_grid_set.rs
roastty/src/font/face/: constraint.rs  coretext.rs  mod.rs
roastty/src/font/opentype/: mod.rs  post.rs  sfnt.rs  svg.rs
roastty/src/font/sprite/: canvas.rs  draw.rs  mod.rs  raster.rs
roastty/src/input/: key.rs  key_encode.rs  key_mods.rs  keymap_darwin.rs  link.rs  mod.rs
roastty/src/os/: args.rs  cf_release_thread.rs  env.rs  i18n.rs  locale.rs  macos.rs  mod.rs  passwd.rs  pty.rs  shell.rs  temp_dir.rs  uri.rs
roastty/src/renderer/: cell.rs  cursor.rs  frame_rebuild.rs  frame_renderer.rs  image.rs  link.rs  mod.rs  shadertoy.rs  size.rs  state.rs
roastty/src/renderer/metal/: api.rs  buffer.rs  compositor.rs  iosurface_layer.rs  mod.rs  pipeline.rs  render_pass.rs  shaders.metal  shaders.rs  target.rs  texture.rs
roastty/src/terminal/: ansi.rs  array_list_collection.rs  base64.rs  base64_scalar.rs  bitmap_allocator.rs  charsets.rs  circ_buf.rs  clipboard.rs  color.rs  context_signal.rs  dcs.rs  device_attributes.rs  device_status.rs  highlight.rs  kitty.rs  lru.rs  message_data.rs  mod.rs  modes.rs  mouse.rs  mouse_encode.rs  offset_hash_map.rs  osc.rs  page.rs  page_list.rs  point.rs  screen.rs  selection.rs  selection_gesture.rs  semantic_prompt.rs  size.rs  size_report.rs  split_tree.rs  stream.rs  string_map.rs  style.rs  terminal.rs  tmux.rs
roastty/src/terminal/kitty/: graphics_command.rs  graphics_exec.rs  graphics_image.rs  graphics_storage.rs  graphics_unicode.rs  mod.rs
roastty/src/terminal/search/: active.rs  screen.rs  sliding_window.rs  thread.rs
roastty/src/unicode/: mod.rs
roastty/testdata/: issue805-ghostty-default-config.txt
roastty/tests/: abi_harness.c
ts3/cef-test-gui/: Cargo.toml
ts3/cef-test-gui/src/: main.rs  shader.wgsl
ts3/cef-test-profile/: Cargo.toml
ts3/cef-test-profile/src/: main.rs
ts3/termsurf-profile/: Cargo.toml
ts3/termsurf-profile/src/: main.rs
ts3/termsurf-test-sender/: Cargo.toml
ts3/termsurf-test-sender/src/: main.rs
ts3/termsurf-web/: Cargo.toml
ts3/termsurf-web/src/: main.rs
ts3/termsurf-xpc/: Cargo.toml
ts3/termsurf-xpc/examples/: receiver.rs
ts3/termsurf-xpc/src/: block.rs  connection.rs  dictionary.rs  error.rs  ffi.rs  lib.rs  listener.rs
ts3/termsurf-xpc/xpc-service/: Info.plist  com.termsurf.xpc-test.plist
tui/: Cargo.toml  README.md  build.rs
tui/src/: ipc.rs  main.rs  xpc.rs
wezboard/env-bootstrap/: Cargo.toml
wezboard/env-bootstrap/src/: ringlog.rs
wezboard/wezboard-gui/: Cargo.toml
wezboard/wezboard-gui/src/: commands.rs  customglyph.rs  frontend.rs  glyphcache.rs  main.rs  renderstate.rs  selection.rs  spawn.rs  tabbar.rs  update.rs
wezboard/wezboard-gui/src/overlay/: confirm_close_pane.rs  copy.rs  mod.rs  quickselect.rs
wezboard/wezboard-gui/src/scripting/: guiwin.rs
wezboard/wezboard-gui/src/termsurf/: conn.rs  input.rs  mod.rs  state.rs
wezboard/wezboard-gui/src/termwindow/: background.rs  box_model.rs  charselect.rs  clipboard.rs  keyevent.rs  mod.rs  modal.rs  mouseevent.rs  palette.rs  paneselect.rs  resize.rs  split_hit_trace.rs  webgpu.rs
wezboard/wezboard-gui/src/termwindow/render/: draw.rs  mod.rs  paint.rs  pane.rs  screen_line.rs  split.rs
(+4738 files in other folders)
