[package]
name = "roastty"
version = "0.1.0"
edition = "2021"

[lib]
name = "roastty"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
flate2 = "1.1.9"
libc = "0.2"
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = [
    "NSRange",
] }
objc2-metal = { version = "0.3", default-features = false, features = [
    "MTLAllocation",
    "MTLBuffer",
    "MTLDevice",
    "MTLPixelFormat",
    "MTLResource",
    "MTLTexture",
    "MTLTypes",
] }
