[package]
name = "roastty"
version = "0.1.0"
edition = "2021"

[lib]
name = "roastty"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
flate2 = "1.1.9"
half = "2"
libc = "0.2"
regex = "1"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "NSEvent",
] }
objc2-foundation = { version = "0.3", default-features = false, features = [
    "NSArray",
    "NSError",
    "NSLocale",
    "NSProcessInfo",
    "NSRange",
    "NSString",
] }
objc2-metal = { version = "0.3", default-features = false, features = [
    "MTLAllocation",
    "MTLBuffer",
    "MTLCommandBuffer",
    "MTLCommandEncoder",
    "MTLCommandQueue",
    "MTLDevice",
    "MTLLibrary",
    "MTLPixelFormat",
    "MTLRenderCommandEncoder",
    "MTLRenderPass",
    "MTLRenderPipeline",
    "MTLResource",
    "MTLTexture",
    "MTLTypes",
    "MTLVertexDescriptor",
] }
objc2-core-foundation = { version = "0.3", default-features = false, features = [
    "CFArray",
    "CFAttributedString",
    "CFBase",
    "CFCGTypes",
    "CFCharacterSet",
    "CFData",
    "CFDictionary",
    "CFNumber",
    "CFString",
    "alloc",
] }
objc2-core-text = { version = "0.3", default-features = false, features = [
    "CTFont",
    "CTFontCollection",
    "CTFontDescriptor",
    "CTFontTraits",
    "CTLine",
    "CTRun",
    "CTStringAttributes",
    "objc2-core-graphics",
] }
objc2-core-graphics = { version = "0.3", default-features = false, features = [
    "CGBitmapContext",
    "CGColorSpace",
    "CGContext",
    "CGFont",
] }
