[package]
name = "roastty"
version = "0.1.0"
edition = "2021"

[lib]
name = "roastty"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
dispatch2 = "0.3"
flate2 = "1.1.9"
half = "2"
libc = "0.2"
regex = "1"
serde_json = "1.0"
uuid = { version = "1.13", features = ["v4"] }
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "NSEvent",
] }
objc2-foundation = { version = "0.3", default-features = false, features = [
    "NSArray",
    "NSError",
    "NSLocale",
    "NSProcessInfo",
    "NSNull",
    "NSRange",
    "NSString",
    "NSThread",
] }
objc2-metal = { version = "0.3", default-features = false, features = [
    "MTLAllocation",
    "MTLBuffer",
    "MTLCommandBuffer",
    "MTLCommandEncoder",
    "MTLCommandQueue",
    "MTLDevice",
    "MTLLibrary",
    "MTLPixelFormat",
    "MTLRenderCommandEncoder",
    "MTLRenderPass",
    "MTLRenderPipeline",
    "MTLResource",
    "MTLSampler",
    "MTLTexture",
    "MTLTypes",
    "MTLVertexDescriptor",
    "objc2-io-surface",
] }
objc2-io-surface = { version = "0.3", default-features = false, features = [
    "IOSurfaceRef",
    "IOSurfaceTypes",
    "libc",
    "objc2",
    "objc2-core-foundation",
] }
objc2-quartz-core = { version = "0.3", default-features = false, features = [
    "CALayer",
    "objc2-core-foundation",
] }
objc2-core-foundation = { version = "0.3", default-features = false, features = [
    "CFArray",
    "CFAttributedString",
    "CFBase",
    "CFCGTypes",
    "CFCharacterSet",
    "CFData",
    "CFDictionary",
    "CFNumber",
    "CFString",
    "alloc",
] }
objc2-core-text = { version = "0.3", default-features = false, features = [
    "CTFont",
    "CTFontCollection",
    "CTFontDescriptor",
    "CTFontTraits",
    "CTLine",
    "CTRun",
    "CTStringAttributes",
    "objc2-core-graphics",
] }
objc2-core-graphics = { version = "0.3", default-features = false, features = [
    "CGBitmapContext",
    "CGColorSpace",
    "CGContext",
    "CGFont",
] }
