[package]
name = "web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "web"
path = "src/main.rs"

[dependencies]
crossterm = "0.29"
ratatui = "0.30"
edtui = { path = "../vendor/edtui", default-features = false, features = ["arboard"] }
arboard = "3"
libc = "0.2"
block2 = "0.6"
clap = { version = "4.5.60", features = ["derive"] }
