[package]
name = "web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "web"
path = "src/main.rs"

[dependencies]
crossterm = "0.29"
ratatui = "0.30"
edtui = { version = "0.11.1", default-features = false, features = ["arboard"] }
arboard = "3"
libc = "0.2"
prost = "0.14"
clap = { version = "4.5.60", features = ["derive"] }

[build-dependencies]
prost-build = "0.14"
