[package]
name = "cef-test-gui"
version = "0.1.0"
edition = "2021"
description = "cef-test GUI — window + wgpu rendering + XPC input routing"

[[bin]]
name = "cef-test-gui"
path = "src/main.rs"

[dependencies]
termsurf-xpc = { path = "../termsurf-xpc" }
wgpu.workspace = true
winit = "0.30"
pollster = "0.4"
bytemuck.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
cef = { path = "../../vendor/cef-rs/cef", features = ["accelerated_osr"] }
metal = "0.33"
objc.workspace = true
io-surface = "0.16"
cocoa = "0.26"
