[package]
name = "cef-test-profile"
version = "0.1.0"
edition = "2021"
description = "cef-test profile server — headless CEF, one per browser profile"

[[bin]]
name = "cef-test-profile"
path = "src/main.rs"

[dependencies]
termsurf-xpc = { path = "../termsurf-xpc" }
clap.workspace = true
ctrlc = "3.4"

[target.'cfg(target_os = "macos")'.dependencies]
cef = { path = "../../vendor/cef-rs/cef", features = ["accelerated_osr"] }
