[package]
name = "termsurf-web"
version = "0.1.0"
edition = "2021"
description = "Web browser coordinator for TermSurf"

[[bin]]
name = "web"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
ctrlc = "3.4"

[target.'cfg(target_os = "macos")'.dependencies]
cef = { path = "../../cef-rs/cef", features = ["accelerated_osr"] }
wgpu = { workspace = true }
pollster = "0.4"
