[package]
name = "termsurf-xpc"
version = "0.1.0"
edition = "2021"
description = "Minimal XPC bindings for TermSurf cross-process communication"
license = "MIT"

[dependencies]
libc.workspace = true

# block2 will be needed when we add safe block-based event handlers
# For now, we expose raw block pointers and let callers create blocks
# block2.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
# All code is macOS-only, but we allow the crate to compile on other platforms
# as a no-op for cross-platform builds
